- Gave the SQARLEditorMain a new look. - Fixed an issue in which code did not run correctly. - Remove SQARLAboutDialog.java and replaced it with the standard BalfLaf about dialog.